<resources>
    <string name="app_name">RickMortyApp</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="gds_name">Gds Desenvolvimento e Tecnologia</string>
    <string name="titulo_login">Bem - Vindo</string>
    <string name="email">Email :</string>
    <string name="senha">Senha :</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="reset_senha">Reset Senha</string>
    <string name="login_automatico">Login automatico</string>
    <string name="nome">Nome :</string>
    <string name="confirmar_senha">Confirmar Senha :</string>
    <string name="login">Já e Cadastrado ? \n Clique aqui para Login</string>
    <string name="invalid_username">Nome Invalido</string>
    <string name="invalid_password">senha invalida</string>
    <string name="campo_vazio">campo vazio</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="capo_diferente">Campo precisam ser iguais</string>
    <string name="vazio" />
</resources>